# hiplog

./: .gitignore  README.md  dev-requirements.txt  import-existing.sh  setup.cfg
.github/workflows/: Dockerfile  test.yaml
notes/2015-10-31/: index.md
notes/2020-09-06/: main.md
notes/2020-09-20/: main.md
notes/2020-09-26/: main.md
src/hiplog/cli/: __init__.py  createitem.py  debug.py  helpers.py  listitems.py
src/hiplog/db/: __init__.py
src/hiplog/model/: __init__.py  createitem.py  events.py  note.py  projections.py
src/hiplog/scripts/: hiplog.py
