[metadata]
name = hiplog
version = attr: hiplog.VERSION
description = helping @el-hult make delicious rose hip wine
license = MIT

[options]
packages = find:
package_dir =
    =src

install_requires =
    Click

[options.entry_points]
console_scripts = 
    hiplog = hiplog.scripts.hiplog:cli

[options.packages.find]
where = src
