[metadata]
name = hiplog
version = attr: hiplog.VERSION
description = helping @el-hult make delicious rose hip wine
license = MIT

[options]
packages = find:
package_dir =
    =src

python_requires = >= 3.9
install_requires =
    Click

[options.entry_points]
console_scripts =
    hiplog = hiplog.cli:cli

[options.packages.find]
where = src

[tool:pytest]
addopts = --suppress-no-test-exit-code

[flake8]
max-line-length = 88
